Fix #119402: Bone collections and grease pencil layers fail with pinned object